# VaultSave-Phantom-Portal

./: .gitignore  LICENSE  常用命令.md
Scripts/reverse/: extract_type_info.py  search_cc.py  search_combined.py  search_types.py
VaultSave_Phantom_Portal/Plugin-making/: CMakeLists.txt
VaultSave_Phantom_Portal/Plugin-making/include/reframework/: API.hpp
VaultSave_Phantom_Portal/Plugin-making/src/: GameLogic.cpp  GameLogic.hpp  Main.cpp
VaultSave_Phantom_Portal/Plugin-making/src/config/: ConfigManager.cpp  ConfigManager.hpp
VaultSave_Phantom_Portal/Plugin-making/src/core/: EventBus.cpp  EventBus.hpp  Logger.cpp  Logger.hpp  Types.hpp
VaultSave_Phantom_Portal/Plugin-making/src/imgui/: imconfig.h  imgui.h  imgui_draw.cpp  re2_imconfig.hpp
VaultSave_Phantom_Portal/Plugin-making/src/rendering/: d3d11.cpp  d3d12.cpp
VaultSave_Phantom_Portal/Plugin-making/src/ui/: LocalizationManager.cpp  LocalizationManager.hpp  UIManager.cpp  UIManager.hpp
VaultSave_Phantom_Portal/Plugin-making/tests/: CMakeLists.txt  main_test.cpp
VaultSave_Phantom_Portal/lua/: VaultSave_Phantom_Portal.lua
lua/VaultSave_Phantom_Portal/: VaultSave_Phantom_Portal.lua
lua/VaultSave_Phantom_Portal/Plugin-making/: CMakeLists.txt
lua/VaultSave_Phantom_Portal/Plugin-making/src/: Main.cpp
lua/VaultSave_Phantom_Portal/Plugin-making/src/rendering/: d3d12.hpp
lua/VaultSave_Phantom_Portal/bak/: Snapshot_Mod_NoError.lua  Snapshot_Mod_with_DebugLog.lua
lua/VaultSave_Phantom_Portal/docs/: 1.md  UserManual.md  VaultCore_Development_Guide.md  VaultSave_Development_Guide.md  源码不透明.md  源码保护型实施计划.md
